--- a/Netflix/Netflix_EDA_R_Shaanal.ipynb
+++ b/Netflix/Netflix_EDA_R_Shaanal.ipynb
@@ -118,45 +118,36 @@
       "cell_type": "markdown",
       "source": [
         "#### **Introduction**\n",
-        "\n",
-        "In the rapidly evolving digital entertainment industry, data-driven insights are crucial for platforms like Netflix to maintain their competitive edge, enhance user experience, and drive business growth. This project focuses on a comprehensive exploratory data analysis (EDA) of the Netflix content catalog, aiming to uncover patterns, trends, and actionable insights that can inform strategic decisions for content acquisition, recommendation systems, and audience engagement.\n",
+        "In the fast-paced digital entertainment sector, insights based on data are essential for platforms such as Netflix to ensure their competitive advantage, improve user experience, and drive business expansion. The current project is centered around an in-depth exploratory data analysis (EDA) of the Netflix content catalog with the objective of identifying patterns, trends, and actionable insights that can be used to guide strategic content acquisition decisions, recommendation engines, and audience interaction.\n",
         "\n",
         "#### **Dataset Overview**\n",
-        "\n",
-        "The dataset used in this project comprises 7,787 entries, each representing a unique movie or TV show available on Netflix. Each entry contains 12 attributes, including show ID, type (Movie or TV Show), title, director, cast, country of origin, date added to Netflix, release year, maturity rating, duration, genres (listed_in), and a brief description. The dataset is diverse, covering content from various countries, genres, and time periods, making it ideal for in-depth analysis.\n",
-        "\n",
+        "The data used for this project contains 7,787 records, each being a different movie or television show on Netflix. Each record has 12 fields, ranging from show ID to title, director, cast, country of origin, date added, release year, maturity rating, running time, genres (listed_in), and a short description. The data set is rich with content from many countries, genres, and years, and would be perfect for detailed analysis.\n",
         "\n",
         "#### **Objectives**\n",
+        "The main aims of this project are:\n",
         "\n",
-        "The primary objectives of this project are:\n",
+        "To get familiar with the organization and variety of Netflix's content catalog. To recognize major trends and relationships between content features like type, genre, country, rating, and length. To make actionable suggestions that can assist Netflix in maximizing its content strategy, enhancing user satisfaction, and facilitating business expansion. Methodology The analysis starts with data preprocessing and cleaning, which involves missing value handling, data type conversion, and categorical variable encoding for quantitative analysis. Univariate and multivariate analyses are conducted to understand the distribution of each feature and among them.\n",
         "\n",
-        "To understand the structure and diversity of Netflix’s content library.\n",
-        "To identify key patterns and correlations among content attributes such as type, genre, country, rating, and duration.\n",
-        "To provide actionable recommendations that can help Netflix optimize its content strategy, improve user satisfaction, and support business growth.\n",
-        "Methodology\n",
-        "The analysis begins with data cleaning and preprocessing, including handling missing values, converting data types, and encoding categorical variables for quantitative analysis. Univariate and multivariate analyses are performed to explore the distribution of each feature and the relationships between them.\n",
-        "\n",
-        "#### **Key visualizations include:**\n",
-        "\n",
-        "Distribution plots for understanding the spread of release years, content types, and ratings.\n",
-        "Correlation heatmaps to identify linear relationships between encoded features such as type, country, rating, and duration.\n",
-        "Pair plots to visualize pairwise relationships and potential clusters among selected features.\n",
-        "Genre and country breakdowns to highlight the most represented categories and regions in the catalog.\n",
+        "#### **Important visualizations are:**\n",
+        "Distribution plots for insight into release year spread, content type, and rating. Correlation heatmaps to see the linear correlation between encoded features like type, country, rating, and duration. Pair plots to visualize pair relationships and possible clusters between chosen features for some of the main features in the catalog. Genre and country breakdowns for emphasizing the most frequent categories and countries in the catalog.\n",
         "\n",
         "#### **Key Findings**\n",
+        "**Content Diversity:** Netflix's content is extremely diverse, with content from various countries, genres, and maturity levels. This diversity is evident in the low correlations between most of the features, showing a wide and varied repertoire.\n",
         "\n",
-        "**Content Diversity:** Netflix's catalog is highly diverse, with content spanning multiple countries, genres, and maturity ratings. This diversity is reflected in the weak correlations between most features, indicating a broad and varied offering.\n",
-        "Content Type and Duration: There is a strong distinction between movies and TV shows in terms of duration, with movies measured in minutes and TV shows in seasons. This separation is evident in both correlation analysis and pair plots.\n",
-        "Release and Addition Trends: Most content is added to Netflix shortly after its release year, suggesting a strategy focused on keeping the catalog up-to-date with recent titles.\n",
-        "Genre and Country Patterns: Certain genres and countries are more prevalent, with some strong associations (e.g., international movies from India). However, the overall spread remains balanced, supporting a global audience.\n",
-        "Director and Cast Influence: Some directors and cast members are closely associated with specific content types, which can be leveraged for targeted recommendations and marketing.\n",
-        "Business Implications\n",
-        "The insights gained from this analysis can directly inform Netflix’s business strategy. Maintaining content diversity and timely acquisitions will help retain and grow the subscriber base. Understanding the relationships between content attributes enables more effective recommendation systems, personalized marketing, and strategic content investments. Identifying underrepresented genres or regions provides opportunities for catalog expansion and audience growth.\n",
+        "**Content Type and Duration:** There is a high differentiation between movies and TV shows as far as duration is concerned, with movies in minutes and TV shows in seasons. This segregation is found in both pair plots and correlation analysis.\n",
+        "\n",
+        "**Release and Addition Trends:** The majority of content is added to Netflix soon after its release year, indicating a strategy of maintaining the catalog current with new releases.\n",
+        "\n",
+        "**Genre and Country Patterns:** There are some genres and countries that are more common, with some strong correlations (e.g., international films from India). Nevertheless, the overall distribution is still balanced, indicating a worldwide audience.\n",
+        "\n",
+        "**Director and Cast Influence:** Certain directors and cast are heavily linked with particular content types, which can be used for targeted marketing and recommendations.\n",
+        "\n",
+        "#### **Business Implications**\n",
+        "\n",
+        " The findings obtained through this analysis can directly inform Netflix's business strategy. Sustaining content variety and timely acquisitions will enable subscriber retention and growth. Knowledge of content attributes' interrelations facilitates more efficient recommendation systems, targeted marketing, and optimal content investments. Discovering less-represented genres or geographies offers catalog expansion and audience development opportunities.\n",
         "\n",
         "#### **Conclusion**\n",
-        "\n",
-        "This project demonstrates the value of exploratory data analysis in uncovering meaningful patterns within the Netflix catalog. By leveraging these insights, Netflix can continue to enhance its platform, deliver a superior user experience, and achieve sustained business success in the competitive streaming market.\n",
-        "\n"
+        "This project illustrates the utility of exploratory data analysis in revealing significant patterns in the Netflix library. Netflix can further improve its platform, provide an improved user experience, and maintain long-term business success in the cutthroat streaming business using these insights.\n"
       ],
       "metadata": {
         "id": "F6v_1wHtG2nS"
@@ -210,7 +201,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "The primary business objective is to analyze the Netflix catalog to uncover key patterns and insights about the content available on the platform. This includes understanding trends in content types (Movies vs TV Shows), genres, countries of origin, release years, ratings, and other attributes. The goal is to provide actionable recommendations that can help Netflix improve its content acquisition strategy, enhance user engagement, and identify potential areas for growth or optimization.Answer Here."
+        "The main business goal is to examine the Netflix catalog to reveal essential trends and insights regarding the content on the site. This involves comprehending content type trends (Movies vs TV Shows), genres, countries of origin, release years, ratings, and other characteristics. The aim is to offer actionable suggestions that can assist Netflix in enhancing its content acquisition strategy, increasing user engagement, and finding possible areas for expansion or optimization."
       ],
       "metadata": {
         "id": "PhDvGCAqmjP1"
