--- a/PaisaBazaar/PaisaBazaar_EDA.ipynb
+++ b/PaisaBazaar/PaisaBazaar_EDA.ipynb
@@ -80,7 +80,9 @@
     },
     {
       "cell_type": "markdown",
-      "source": [],
+      "source": [
+        "https://github.com/Shaanal/Backup/blob/Labmentix/PaisaBazaar/PaisaBazaar_EDA.ipynb\n"
+      ],
       "metadata": {
         "id": "P3LOfWGjFA7c"
       }
